--- a/app/templates/contact.hbs
+++ b/app/templates/contact.hbs
@@ -12,4 +12,5 @@
 
 <p>superrentalsrep@superrentals.com</p>
 
-<a href="/about">About</a>
+{{#link-to 'index'}}Home{{/link-to}}
+{{#link-to 'about'}}About{{/link-to}}
